--- a/manuel.html
+++ b/manuel.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>a</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita alias repudiandae natus, unde molestiae eius nam pariatur, iure veniam quae commodi, quia beatae quos labore delectus? Beatae obcaecati porro facilis!</p>
+    <h1>hola profe</h1>
+    <p>el mejor aporte </p>
 </body>
 </html>
